[package]
name = "luna"
version = "0.1.0"
edition = "2024"
authors = ["scarlet"]
description = "A high-performance, cross-platform UI framework"
license = "MIT"

[dependencies]
cosmic-text = "0.14.2"
pollster = "0.4.0"
winit = "0.29"
wgpu = "0.19"
glam = "0.30.4"
tokio = "1.45.1"
env_logger = "0.11.8"
log = "0.4.27"
bytemuck = "1.23.1"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
anyhow = "1.0.98"

[[example]]
name = "immediate"
path = "examples/immediate.rs"

[[example]]
name = "retained"
path = "examples/retained.rs"

[[example]]
name = "flex"
path = "examples/flex.rs"

[[example]]
name = "grid"
path = "examples/grid.rs"

[[example]]
name = "scrollable"
path = "examples/scrollable.rs"

[lib]
name = "luna"
path = "src/lib.rs"

[package.metadata.design-tokens]
out = "assets/design/tokens.json"
